# cargo-ndk

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: cargo.rs  cli.rs  shell.rs
