[package]
name = "cargo-ndk"
version = "3.5.5"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
repository = "https://github.com/topminipie/cargo-ndk"
documentation = "https://docs.rs/cargo-ndk"
homepage = "https://github.com/topminipie/cargo-ndk"
license = "Apache-2.0 OR MIT"
description = "Makes building Rust libraries for Android simpler"
keywords = ["ndk", "cargo", "android", "build"]
categories = [
    "command-line-utilities",
    "config",
    "os",
    "development-tools::cargo-plugins",
    "development-tools::build-utils"
]
edition = "2021"
rust-version = "1.73"
default-run = "cargo-ndk"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0"
cargo_metadata = "0.18"
dunce = "1.0"
gumdrop = "0.8"
is-terminal = "0.4"
libc = "0.2"
pathos = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termcolor = "1.4"
toml = "0.8"
version_check = "0.9"

[target.'cfg(windows)'.dependencies]
fwdansi = "1.1"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52"
features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_Threading",
  "Win32_System_JobObjects",
]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
debug = false
panic = "abort"
